CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( nCacheTools )

FIND_PACKAGE ( XercesC REQUIRED )
FIND_PACKAGE ( Boost 1.51 REQUIRED COMPONENTS system filesystem )
FIND_PACKAGE ( GoogleLog REQUIRED )
FIND_PACKAGE ( Alembic REQUIRED )
FIND_PACKAGE ( ILMBase REQUIRED )
FIND_PACKAGE ( HDF5 COMPONENTS C HL REQUIRED )

IF ( BUILD_HOUDINI_TOOLS )
  FIND_PACKAGE ( HDK REQUIRED )
ENDIF ()

INCLUDE_DIRECTORIES ( ${XERCESC_INCLUDE_DIR} )
INCLUDE_DIRECTORIES ( ${Boost_INCLUDE_DIR} )
INCLUDE_DIRECTORIES ( ${GLOG_INCLUDE_DIR} )
INCLUDE_DIRECTORIES ( ${ALEMBIC_INCLUDE_DIR} )
INCLUDE_DIRECTORIES ( ${ILMBASE_INCLUDE_DIRS} )

IF (WIN32)
  ADD_DEFINITIONS ( -DGOOGLE_GLOG_DLL_DECL= )
  SET ( ADDITIONAL_LIBRARIES Ws2_32 )
ENDIF ()

ADD_SUBDIRECTORY ( lib )

INCLUDE_DIRECTORIES ( lib )
ADD_SUBDIRECTORY ( apps )

IF ( BUILD_HOUDINI_TOOLS )
  INCLUDE_DIRECTORIES ( ${HDK_INCLUDE_DIR} )
  ADD_SUBDIRECTORY ( houdini )
ENDIF()