CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( nCacheTools )

FIND_PACKAGE ( Threads REQUIRED )

IF ( BUILD_XML_TOOLS )
  FIND_PACKAGE ( XercesC REQUIRED )
ENDIF ()
FIND_PACKAGE ( Boost 1.55 REQUIRED)
FIND_PACKAGE ( GoogleLog REQUIRED )
IF ( BUILD_ALEMBIC_TOOLS )
  FIND_PACKAGE ( Alembic REQUIRED )
  FIND_PACKAGE ( HDF5 COMPONENTS C HL REQUIRED )
ENDIF ()
FIND_PACKAGE ( ILMBase REQUIRED )

IF ( BUILD_HOUDINI_TOOLS )
  FIND_PACKAGE ( HDK REQUIRED )
ENDIF ()

IF ( BUILD_XML_TOOLS )
  INCLUDE_DIRECTORIES ( ${XERCESC_INCLUDE_DIR} )
ENDIF()
INCLUDE_DIRECTORIES ( ${Boost_INCLUDE_DIR} )
INCLUDE_DIRECTORIES ( ${GLOG_INCLUDE_DIR} )
IF ( BUILD_ALEMBIC_TOOLS )
  INCLUDE_DIRECTORIES ( ${ALEMBIC_INCLUDE_DIR} )
ENDIF ()
INCLUDE_DIRECTORIES ( ${ILMBASE_INCLUDE_DIRS} )

IF (WIN32)
  ADD_DEFINITIONS ( -DGOOGLE_GLOG_DLL_DECL= )
  SET ( ADDITIONAL_LIBRARIES Ws2_32 )
ENDIF ()

ADD_SUBDIRECTORY ( lib )

SET  ( NCACHE_REQUIRED_LIBRARIES
  nCacheParser
  ${XERCESC_xercesc_LIBRARY}
  ${Boost_LIBRARIES}
  ${GLOG_glog_LIBRARY}
  ${ADDITIONAL_LIBRARIES}
  ${CMAKE_THREAD_LIBS_INIT}
  )


INCLUDE_DIRECTORIES ( lib )
ADD_SUBDIRECTORY ( apps )

IF ( BUILD_HOUDINI_TOOLS )
  INCLUDE_DIRECTORIES ( ${HDK_INCLUDE_DIR} )
  ADD_SUBDIRECTORY ( houdini )
ENDIF()